project/constraints/allowed-capabilities.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: capabilities-demo
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment","ReplicaSet", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "myapp"
  parameters:
    requiredDropCapabilities: ["ALL"]
