project/constraints/allowed-host-path.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment","ReplicaSet", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedHostPaths:
    #- readOnly: true
      #pathPrefix: "/foo"
