project/constraints/allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment","ReplicaSet", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos:
      - "quay.io/" #cert manager, argocd, prometheus, 
      - "openpolicyagent/" # openpolicyagent, gatekeeper
      - "registry.k8s.io/" # nginx
      - "cr.fluentbit.io/" # fluentbit
      - "gcr.io/" #test
      - "jirivasm/"
