project/constraints/disallow-loadBalancer.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockLoadBalancer
metadata:
  name: block-load-balancer
spec:
  match:
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Service
