project/constraints/disallow-tags.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: disallowed-tags
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment","ReplicaSet", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    tags: ["latest"]
    exemptImages: ["openpolicyagent/opa-exp:latest", "openpolicyagent/opa-exp2:latest" ]
