project/constraints/required-label-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces:
    - kube*
    - development
    - myapp
    - opa
    - default
    - production
    - prometheus
  parameters:
    labels: ["Owner"]
