project/constraints/unique-paths.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind:  K8sIngressUniquePath
metadata:
  name: k8singressuniquepath
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
  parameters:
    path: ["/", "/test"]
